--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.6.5",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "date-fns": "^2.16.1",
     "jsonp": "^0.2.1",
+    "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-date-range": "^1.0.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
